# muxel

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  LICENSING.md  README.md
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
crates/muxel/: Cargo.toml  build.rs
crates/muxel-core/: Cargo.toml
crates/muxel-core/src/: agent.rs  appimage.rs  audio.rs  autopilot.rs  diff.rs  gui_path.rs  lib.rs  locale.rs  memory.rs  pane.rs  shell.rs  ssh.rs  stt.rs  tmux.rs  tts.rs  url.rs  worktree.rs
crates/muxel-core/tests/: dedupe_instances.rs  pane_invariants.rs  remote_layout_memory.rs
crates/muxel-store/: Cargo.toml
crates/muxel-store/src/: lib.rs
crates/muxel-terminal/: Cargo.toml
crates/muxel-terminal/src/: colors.rs  element.rs  keymap.rs  lib.rs  links.rs  listener.rs  present_flag.rs  profile.rs  search.rs  session.rs  view.rs
crates/muxel-tray/: Cargo.toml
crates/muxel-tray/examples/: tray_smoke.rs
crates/muxel-tray/src/: desktop.rs  lib.rs  linux.rs
crates/muxel/assets/i18n/: ar.json  cs.json  de.json  el.json  en.json  es.json  fa.json  fr.json  hi.json  id.json  it.json  ja.json  ko.json  nl.json  pl.json  pt-BR.json  pt.json  ru.json  sv.json  th.json  tr.json  uk.json  vi.json  zh-CN.json  zh-TW.json
crates/muxel/src/: app.rs  browser.rs  browser_helper.rs  editor.rs  filetree.rs  i18n.rs  integrations.rs  main.rs  present_pump.rs  secrets.rs  settings_view.rs  stt.rs  theme.rs  tts.rs  ui_profile.rs  update.rs
docs/: session-lineage.md  terminal-paint-architecture.md  terminal-paint-under-load.md  terminal-performance-next-steps.md
ios/: .gitignore  LICENSE  README.md  project.yml
ios/AppStore/: ReviewNotes.md  Submission.md
ios/Muxel/: PrivacyInfo.xcprivacy
ios/Muxel/App/: AppDelegate.swift  AppLock.swift  AppState.swift  Info.plist  KeyboardPrewarmer.swift  Muxel.entitlements  MuxelApp.swift
ios/Muxel/Assets.xcassets/LaunchBackground.colorset/: Contents.json
ios/Muxel/Assets.xcassets/MuxelMark.imageset/: Contents.json
ios/Muxel/Background/: NotificationManager.swift  StatusPoller.swift
ios/Muxel/Interop/: PollService.swift  ProjectDiscovery.swift  RemoteFiles.swift  RemoteLayoutStore.swift  WorktreeService.swift
ios/Muxel/LiveActivity/: ActivitySummaryBuilder.swift  LiveActivityController.swift
ios/Muxel/Models/: AgentLaunch.swift  InjectionMode.swift  Instance.swift  PaneMutations.swift  PaneNode.swift  RemoteLayout.swift  Store.swift  Worktree.swift  WorktreeNaming.swift
ios/Muxel/SSH/: CitadelSSHConnection.swift  HostKeyStore.swift  JumpHostSpec.swift  MockSSHConnection.swift  SSHConnection.swift  TOFUHostKeyValidator.swift
ios/Muxel/Secrets/: Keychain.swift
ios/Muxel/Status/: AgentStatus.swift  Markers.swift
ios/Muxel/Theme/: DesignKit.swift  MuxelTheme.swift  TerminalTheme.swift
ios/Muxel/Tmux/: TmuxCommands.swift  TmuxSession.swift
ios/Muxel/UI/: AddHostView.swift  AddProjectView.swift  DiffPaneView.swift  DiscoverProjectsView.swift  EditorPaneView.swift  HostEditorView.swift  HostKeyPromptView.swift  HostReachabilityState.swift  IdentitiesView.swift  LaunchInstanceView.swift  LeafPaneView.swift  LiveTerminalView.swift  NoticeBanner.swift  PaneContentView.swift  PaneDrag.swift  PaneTreeView.swift  ProjectDetailView.swift  RootView.swift  SecureFieldAutoFill.swift  SettingsView.swift  SidebarView.swift  StatusBadge.swift  StatusDot.swift  TabChipView.swift  TerminalAccessoryRow.swift  TerminalKeys.swift  TerminalPaneView.swift  TerminalStore.swift  ThemePickerView.swift
ios/Muxel/Util/: ConfirmationCopy.swift  DiffText.swift  ImportedFile.swift  Shell.swift
ios/MuxelTests/: ActivitySummaryTests.swift  AgentLaunchTests.swift  AppLockTests.swift  AppNoticeTests.swift  ConfirmationCopyTests.swift  DiscoveryTests.swift  DraftConnectionTests.swift  HostEditorLogicTests.swift  HostKeyTests.swift  IdentityTests.swift  InteropTests.swift  JumpHostTests.swift  KeepaliveTests.swift  LayoutLoadStateTests.swift  LiveGridStatusTests.swift  LocalStoreTests.swift  PTYOpenGateTests.swift  PaneMutationTests.swift  Phase5Tests.swift  ProtocolPortTests.swift  ShellTests.swift  StoreQueryTests.swift  TerminalKeysTests.swift  TestSupport.swift  ThemeTerminalTests.swift  WorktreeTests.swift
ios/MuxelWidgets/: Info.plist  MuxelLiveActivity.swift  MuxelWidgetsBundle.swift  PrivacyInfo.xcprivacy
ios/Shared/: MuxelActivityAttributes.swift
packaging/: muxel.desktop
packaging/macos/: Info.plist  muxel.entitlements
packaging/windows/: muxel.iss
scripts/: dev.sh  install-desktop.sh  profile-terminal.ps1  sign-macos.sh  sign-windows.sh  translate.py
