[package]
name = "muxel-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core domain types for muxel: projects, agent instances, and the pane layout tree."

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
