[package]
name = "muxel-tray"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "System-tray (StatusNotifierItem / notification-area) integration for muxel."

[dependencies]
uuid.workspace = true
log.workspace = true

# Linux: StatusNotifierItem over D-Bus (pure zbus, no GTK / no libdbus C dep), on
# its own thread.
[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.3", default-features = false, features = [
    "async-io",
    "blocking",
] }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tray-icon = "0.19"
