[package]
name = "muxel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A multi-agent terminal multiplexer for managing many AI coding agents across projects."

[[bin]]
name = "muxel"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
muxel-core.workspace = true
muxel-terminal.workspace = true
muxel-store.workspace = true
muxel-tray.workspace = true
anyhow.workspace = true
log.workspace = true
uuid.workspace = true
serde_json.workspace = true
notify-rust = "4"
# debug-embed: always bake files into the binary, even in debug builds.
# Without this, rust-embed reads icons from disk under CARGO_MANIFEST_DIR
# (e.g. the primary user's .cargo/git/checkouts/gpui-component-*/assets). That breaks
# secondary Windows identities (AgentWorker via runas) which cannot read the
# primary user's profile — title-bar min/max/close and other gpui-component
# icons render as empty gray plates. Feature unification applies this to
# gpui-component-assets as well.
rust-embed = { version = "8", features = ["debug-embed"] }
# Decode the embedded app icon (PNG) to RGBA for the Windows/macOS tray icon.
image = { version = "0.25", default-features = false, features = ["png"] }
# Detect the OS UI locale at startup for i18n (already resolved transitively).
sys-locale = "0.3"
# Gitignore-aware file walk for the Ctrl+P search palette.
ignore = "0.4"
# Local wall-clock time for scheduled Loops (time-of-day + interval firing).
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# In-app updater: check GitHub Releases (ureq, blocking on a bg thread), replace
# the running binary (self_replace), and unpack the Windows/macOS zip (zip).
ureq = { version = "2", features = ["json", "tls"] }
self-replace = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
# Secure storage of remote-host passwords in the OS keychain (Secret Service on
# Linux, Keychain on macOS, Credential Manager on Windows).
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "crypto-rust",
] }
# Speech-to-text: cross-platform mic capture (WASAPI/CoreAudio/ALSA). In-process
# whisper.cpp for offline local transcription is added per-target just below.
cpal = "0.15"

# whisper.cpp (compiled from source via cmake) — every target EXCEPT Windows on
# ARM, where ggml's CPU backend refuses the MSVC compiler ("MSVC is not supported
# for ARM, use clang"). There, local STT is unavailable and the Provider
# (OpenAI-compatible) engine is the fallback. Keep this cfg in sync with the gates
# in stt.rs and app.rs.
[target.'cfg(not(all(target_os = "windows", target_arch = "aarch64")))'.dependencies]
whisper-rs = "0.14"

# Ask macOS (TCC) whether the microphone is *denied*. A denied app is handed
# silent audio rather than an error, so nothing in cpal can tell us — see the
# permission check in stt.rs. These are the objc2 versions gpui already pins, so
# depending on them directly adds nothing new to the tree.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"

# --- Built-in browser (system webview via wry; no bundled Chromium) ---
# macOS/Windows: an embedded in-pane webview via gpui-component's gpui-wry
# (WKWebView / WebView2 as a native child of the gpui window). Pinned to the
# same gpui-component rev so the `gpui` types unify.
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
gpui-wry = { git = "https://github.com/longbridge/gpui-component", rev = "e416af7f4dad861f251d357b6aa677dbc13a500e" }
# The same lb-wry release gpui-wry pins, so the `wry` types unify.
wry = { version = "0.53.3", package = "lb-wry" }

# Linux: gpui can't host a WebKitGTK child (no GTK loop; XEmbed is X11-only), so
# the browser is a separate muxel-managed window: `muxel --browser <url>` runs a
# WebKitGTK window via wry + gtk (see browser_helper.rs). lb-wry is the same wry
# lineage gpui-wry uses; gtk 0.18 is the matching gtk-rs release.
[target.'cfg(target_os = "linux")'.dependencies]
wry = { version = "0.53.3", package = "lb-wry" }
gtk = "0.18"

# Embeds the .exe icon (see build.rs); Windows build-host only, so it never
# affects the Linux/macOS builds.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# --- Linux .deb packaging (cargo-deb) ---
# Asset source paths are resolved relative to THIS crate's directory, so files
# at the workspace root are reached with `../../`. The release workflow builds
# the binary first and runs `cargo deb --no-build -p muxel`.
[package.metadata.deb]
maintainer = "ProjectHax LLC"
copyright = "2026, ProjectHax LLC"
section = "utils"
priority = "optional"
depends = "$auto"
extended-description = """\
muxel is a terminal multiplexer for managing many AI coding agents (Claude, \
Ollama, and others) across multiple projects, with split panes, tmux/worktree \
integration, and one-click task runners."""
assets = [
    ["../../target/release/muxel", "usr/bin/muxel", "755"],
    ["../../packaging/muxel.desktop", "usr/share/applications/muxel.desktop", "644"],
    ["assets/muxel.svg", "usr/share/icons/hicolor/scalable/apps/muxel.svg", "644"],
    ["assets/muxel.png", "usr/share/icons/hicolor/256x256/apps/muxel.png", "644"],
    ["../../README.md", "usr/share/doc/muxel/README.md", "644"],
    ["../../LICENSE", "usr/share/doc/muxel/LICENSE", "644"],
]

# --- Linux .rpm packaging (cargo-generate-rpm) ---
# Unlike cargo-deb, cargo-generate-rpm resolves `source` paths relative to the
# directory it is invoked from. The release workflow runs it from the workspace
# root: `cargo generate-rpm -p crates/muxel`.
[package.metadata.generate-rpm]
summary = "Multi-agent terminal multiplexer for AI coding agents"
assets = [
    { source = "target/release/muxel", dest = "/usr/bin/muxel", mode = "755" },
    { source = "packaging/muxel.desktop", dest = "/usr/share/applications/muxel.desktop", mode = "644" },
    { source = "crates/muxel/assets/muxel.svg", dest = "/usr/share/icons/hicolor/scalable/apps/muxel.svg", mode = "644" },
    { source = "crates/muxel/assets/muxel.png", dest = "/usr/share/icons/hicolor/256x256/apps/muxel.png", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/muxel/README.md", mode = "644", doc = true },
    { source = "LICENSE", dest = "/usr/share/doc/muxel/LICENSE", mode = "644", doc = true },
]
